tests/basics/tstring_coverage.py.exp
=== Basic functionality ===
Template
Strings: ('Hello ', '')
Value: World

=== Constructor tests ===
Empty: ('',)
Keyword error: Template.__new__ only accepts *args arguments
Invalid type: Template.__new__ *args need to be of type 'str' or 'Interpolation', got int
Single string: ('single',)
Multi concat: ('firstsecondthird',)
Mixed: ('start', 'middle', 'end')
Tuple validation: interpolations tuple must contain only Interpolation objects, got int

=== Format specifiers ===
Conversions: r='test', s=test, a='test'
Conv+format: '   3.14159'
Interpolated format: '      3.14'
Escaped {}: SKIPPED (hangs)
Escaped }}: SKIPPED (hangs)
Complex format: SKIPPED (hangs)
Undefined var in format: NameError
Debug: x=x=42

=== Size limits ===
Large template: 100003 chars

=== Values property ===
Small values: (1, 2, 3, 4)
Large values: 10 items
Exception path: skipped (requires internals)

=== Binary operations ===
T+T: Template
T+str: can only concatenate Template (not "str") to Template
str+T: unsupported types for __add__: 'str', 'Template'
int+T: TypeError
-: unsupported
*: unsupported
/: unsupported
%: unsupported
**: unsupported
&: unsupported
|: unsupported
^: unsupported
<<: unsupported
>>: unsupported

=== Iterator ===
Iterator: ['str', 'Interpolation', 'str', 'Interpolation', 'str']
Empty strings: [1, 2]
__iter__ attr: False

=== __template__ builtin ===
Invalid format: invalid interpolation format
__template__: Template

=== Attributes ===
strings: ('test', '')
interpolations: 1
values: (42,)
__str__ bound: test42

=== String prefixes ===
Raw: 'Path: C:\Users\'
tr: 'Path: C:\Users\'
bt prefix: SyntaxError
ft prefix: SyntaxError
t+regular: SyntaxError

=== Parser edge cases ===
Expr limit: template expression too long
Empty expr: None
Complex: 1
Invalid syntax: SyntaxError

=== Special cases ===
Unicode: Party 🎉!
Implicit: 'Part1 Part2'
repr: Template(strings=('t...
isinstance: True
Interpolation: read-only

=== Template repr test ===
Templates created for repr test

=== Interpolation attribute protection ===
Correctly blocked: 'Interpolation' object attribute is read-only
Correctly blocked: 'Interpolation' object attribute is read-only
Correctly blocked: 'Interpolation' object attribute is read-only
Correctly blocked: 'Interpolation' object attribute is read-only

=== Template make_new edge cases ===
Raw t-string: Template(strings=('raw\\nstring',), interpolations=())
Raw t-string with interp: Template(strings=('raw ', ' string'), interpolations=(Interpolation(42, 'x', None, ''),))
tr prefix: Template(strings=('also raw',), interpolations=())

=== Format spec with escaped braces ===
Format with interpolated width: '        42'
Format with width and precision: '      3.14'

=== Template concatenation edge cases ===
Empty + Empty: ''
Empty + Content: 'content'
Content + Empty: 'content'
Interp + Interp: '12'
Mixed concat: 'start 1 middle continue 2 end'

=== Template iteration with empty strings ===
Adjacent interpolations iter: ['Interpolation', 'Interpolation']
Start with interp iter: ['Interpolation', 'str']
End with interp iter: ['str', 'Interpolation']
Triple interp iter: ['Interpolation', 'Interpolation', 'Interpolation']

=== Large template test ===
Large template size: 100002

=== Debug format test ===
Normal format: Template(strings=('', ''), interpolations=(Interpolation(42, 'value', None, ''),))

=== Binary operation errors ===
Correctly blocked int+Template: unsupported types for __add__: 'int', 'Template'
Correctly blocked -
Correctly blocked *
Correctly blocked /
Correctly blocked %
Correctly blocked **
Correctly blocked &
Correctly blocked |
Correctly blocked ^
Correctly blocked <<
Correctly blocked >>

=== Values property large array ===
Large values: (1, 2, 3, 4, 5)

=== Invalid interpolation format ===
Testing invalid interpolation formats

=== String conversion errors ===
Correctly caught str error: str conversion failed

=== Complex format specs ===
s conversion: 42
a conversion: 42
s conversion with format: '        42'
Float format: 3.14

Full coverage tests completed!